fixed some alignments

--- a/css/people-u-may-know.css
+++ b/css/people-u-may-know.css
@@ -3,7 +3,7 @@
   font-size: 1.1vw;
   padding-bottom: 20px;
   color: #1fa2ff;
-  text-align: center;
+  text-align: start;
 }
 
 .ppl {
