--- a/css/status-box.css
+++ b/css/status-box.css
@@ -19,11 +19,13 @@
   transition: background 0.6s ease;
   border-radius: 10px;
   padding: 45px 35px;
+  padding-top: 25px !important;
 }
 
 .post-button {
   position: absolute;
-  right: 15px;
+  right: 27px;
+  margin-top: -5px;
   text-decoration: none;
   border: 0;
 
